animation timeline modified

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8"> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+	<meta property="og:title" content="高雄廠煙下，中油工人的最後一天 | 報導者">
+	<meta property="og:description" content="2015年10月底，《報導者》採訪團隊在高雄煉油廠停工前夕深入廠區，藉由現場目擊與拍攝、訪談多位中油不同世代員工，綜合寫成一名工人阿昌的故事。阿昌並非真實人物，但從真實素材而來。此數位專題將以他的遭遇、回憶及情感，在灰濛的廠煙下，描繪一整代高廠工人的輪廓。">
+	<meta property="og:type" content="article">
+	<meta property="og:url" content="https://kojima.tw/project/parallax/" />
+	<meta property="og:image" content="https://kojima.tw/project/parallax/img/cover_share.jpg">
 	<title>高雄廠煙下，中油工人的最後一天 | 報導者</title>
 
 	<link rel="stylesheet" href="style/normalize.css" type="text/css">
@@ -27,7 +32,7 @@
 	<script src="js/blazy.min.js"></script>
 	<script src="js/jquery.bxslider.min.js"></script>
 	<script src="js/plugins/animation.gsap.min.js"></script>
-	<!--<script src="js/plugins/debug.addIndicators.min.js"></script>-->
+	<script src="js/plugins/debug.addIndicators.min.js"></script>
 </head>
 <body style="min-width: 1260px;">
 
@@ -125,7 +130,7 @@
 						</div>
 					</section>
 
-					<section id="p-3" class="panel" style="height:200%; overflow:hidden;">
+					<section id="p-3" class="panel" style="height:300%; overflow:hidden;">
 						<div id="p-3-bg" class="b-lazy BG" data-src="img/map.png"></div>
 					</section>
 
@@ -216,8 +221,8 @@
 						</div>
 					</section>
 
-					<section id="p-13" class="panel" style="height:150%;">
-						<div class="BG_W" style="height:150%;"></div>
+					<section id="p-13" class="panel" style="height:100%;">
+						<div class="BG_W" style="height:100%;"></div>
 						<div style="position:absolute; width:50%; clear:both; right:0px; line-height:120vh; text-align:left;">
 							<div style="display:inline-block; width:450px; font-size:18px; letter-spacing:0.2em; line-height:30px;">
 								<p class="sourcehansans-tc-regular">阿昌16、7歲讀建教班時在公用水處理廠工作、跟著輪班。雖然調了單位，但他還是習慣騎著腳踏車繞去看看，找老同學敘舊。以前公用水處理工場有個比游泳池還大的水池，同學們都會在這裡游泳。</p>
@@ -225,7 +230,7 @@
 						</div>
 					</section>
 
-					<section id="p-14" class="panel" style="height:400%;">
+					<section id="p-14" class="panel" style="height:500%;">
 						<div id="p-15-2" class="b-lazy F_IMG" data-src="img/15-2.jpg"></div>
 						<div id="p-15-1" class="b-lazy F_IMG" data-src="img/15.jpg"></div>
 						<div id="p-14-2" class="b-lazy F_IMG" data-src="img/14-2.jpg"></div>
@@ -264,9 +269,9 @@
 						</div>
 					</section>
 
-					<section id="p-17-2" class="panel" style="height:300%;">
+					<section id="p-17-2" class="panel clearfix" style="height:auto;">
 						<div class="BG_W" style="height:300%;"></div>
-						<div style="position:relative; width:50%; clear:both; float:right; text-align:left;">
+						<div style="position:relative; width:50%; clear:both; height:auto; float:right; text-align:left;">
 							<div style="position:relative; text-align:left; margin-top:30px; width: calc(100% - 45px); font-size:18px; letter-spacing:0.2em;">
 								<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/slider/210.jpg" style="max-width:100%;" />
 								<p style="font-size:14px;">高廠西門內矗立的蔣介石銅像是目前少數還留存的銅像之一，如今成為威權時代的象徵。(攝影／林聰勝)</p>
@@ -283,7 +288,7 @@
 						</div>
 					</section>
 
-					<section id="p-18" class="panel" style="height:200%;">
+					<section id="p-18" class="panel" style="height:300%;">
 						<div id="p-19" class="b-lazy BG" data-src="img/19.jpg"></div>
 						<div id="p-18-1" class="b-lazy BG" data-src="img/18.jpg"></div>
 						<div id="box9" class="dialogue FL shadow-3px">
@@ -297,7 +302,7 @@
 						</div>
 					</section>
 
-					<section id="p-20" class="panel" style="height:200%;">
+					<section id="p-20" class="panel" style="height:300%;">
 						<div id="p-20-2" class="b-lazy F_IMG" data-src="img/20-2.jpg"></div>
 						<div id="p-20-1" class="b-lazy F_IMG" data-src="img/20-1.jpg"></div>
 						<div id="box11" class="dialogue FR shadow-3px">
@@ -308,7 +313,7 @@
 
 					<section id="p-21" class="panel clearfix" style="height: auto;">
 						<div class="BG_W" style="height:200%;"></div>
-						<div class="clearfix" style="width:50%; float:right;">
+						<div class="clearfix" style="width:50%; float:right; height: auto;">
 							<div class="sourcehansans-tc-regular" style="position:relative; text-align:left; margin-top:180px; width:450px; font-size:18px; letter-spacing:0.2em; line-height:30px;">
 								<p>阿昌17歲念建教班的時候，追求年輕女工娟娟，那時參加高廠的籃球隊，娟娟常來場邊幫他加油。在運動場上沒有身分貴賤，阿昌的球技硬是比那些科長、經理好，常常一個漂亮的過人上籃，就可以抵得過他在工廠被使喚的委屈。</p>
 								<p>40年前，在貧瘠的高雄，有籃球場、保齡球場、溫水游泳池是很稀奇的事，外面的人連聽都沒聽過。阿昌在那幾年學會游泳，他還記得過年回家說給弟妹聽時，他們吃驚的樣子。</p>
@@ -324,7 +329,7 @@
 						</div>
 					</section>
 
-					<section id="p-22" class="panel" style="height:300%;">
+					<section id="p-22" class="panel" style="height:400%;">
 						<div id="p-24-1" class="b-lazy BG" data-src="img/24.jpg"></div>
 						<div id="p-23-1" class="b-lazy BG" data-src="img/23.jpg"></div>
 						<div id="p-22-1" class="b-lazy BG" data-src="img/22.jpg"></div>
@@ -355,7 +360,7 @@
 						</div>
 					</section>
 
-					<section id="p-26" class="panel" style="height:200%;">
+					<section id="p-26" class="panel" style="height:300%;">
 						<div id="p-27-1" class="b-lazy BG" data-src="img/27.jpg"></div>
 						<div id="p-26-1" class="b-lazy BG" data-src="img/26.jpg"></div>
 						<div id="box14" class="dialogue FL shadow-3px">
@@ -379,7 +384,7 @@
 						</div>
 					</section>
 
-					<section id="p-29" class="panel" style="height:400%;">
+					<section id="p-29" class="panel" style="height:500%;">
 						<div id="p-30-2" class="b-lazy F_IMG" data-src="img/30-2.jpg"></div>
 						<div id="p-30-1" class="b-lazy F_IMG" data-src="img/30-1.jpg"></div>
 						<div id="p-29-2" class="b-lazy F_IMG" data-src="img/29-2.jpg"></div>
@@ -435,14 +440,14 @@
 						</div>
 					</section>
 
-					<section id="p-34" class="panel" style="height:auto; clear:both;">
+					<section id="p-34" class="panel clearfix" style="height:auto;">
 						<div class="BG_W" style="height:200%;"></div>
-						<div style="position:relative; width:100%; top:160px; clear:both; right:0px; text-align:center;">
+						<div style="position:relative; width:100%; top:160px; clear:both; height:auto; right:0px; text-align:center;">
 							<div class="sourcehansans-tc-regular" style="display:inline-block; width:450px; font-size:18px; letter-spacing:0.2em; line-height:30px;">
 								<p>高雄捷運開了以後，阿昌搭過幾次捷運來上晚班，從窗戶看出去的高廠，是他最喜歡的景色之一。每當看到熊熊冒火的燃燒塔，阿昌就有回家的熟悉感覺。不過現在大部份工場關閉，半屏山腰的五輕廢氣燃燒塔，去年就沒有運作了，以前他從捷運上望過去，燃燒塔就真的像中油LOGO一樣，黑暗中不滅的火光。</p>
 							</div>
 							<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/mrtline1.png" style="max-width:100%; margin-top:140px;" />
-							<div style="position:relative; width:88%; margin: 0 auto;">
+							<div style="position:relative; width:88%; margin: 5px auto;">
 								<div style="width:28%; background-color:#CCC; display:inline-block; margin-right:2%;">
 									<video autoplay loop muted width="100%">
 										<source src="video/MRT1.mp4" type="video/mp4">
@@ -460,12 +465,12 @@
 								</div>
 
 							</div>
-							<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/mrtline2.png" style="max-width:100%;" />
+							<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/mrtline2.png" style="max-width:100%; margin-top:0px;" />
 							<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/mrt.png" style="width:275px;height:250px; margin-top:80px; margin-bottom:160px; padding-bottom:160px;" />
 						</div>
 					</section>
 
-					<section id="p-35" class="panel" style="height:300%;">
+					<section id="p-35" class="panel" style="height:400%;">
 						<div id="p-37-1" class="b-lazy BG" data-src="img/37.jpg"></div>
 						<div id="p-36-1" class="b-lazy BG" data-src="img/36.jpg">
 							<div style="position:absolute;bottom:25px;right:25px;color:#FFF;font-size:14px;">（攝影／林瑞慶）</div>
