mobile version updated

--- a/mobile.html
+++ b/mobile.html
@@ -147,10 +147,10 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/084.jpg" title="在那個經濟起飛的時代，高廠就配備最先進的控制系統，即便20年後的今天也毫不遜色。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/087.jpg" title="高廠輝煌的年代，機器場房不停運轉，工人三班24小時輪班作業，作業現場人聲鼎沸，如今要關廠，當年盛況不再。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/091.jpg" title="牆上的工作班表還張貼著三班制的工作人員，而他們的首要任務現在已從生產作業變成停場作業。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/161.jpg" title="高廠先進的控制系統讓監控人員透過按鍵儀表就可以掌握整個工場的現況。(林聰勝攝/報導者)" /></li>
+				  <li><img src="img/slider/084.jpg" title="在那個經濟起飛的時代，高廠就配備最先進的控制系統，即便20年後的今天也毫不遜色。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/087.jpg" title="高廠輝煌的年代，機器場房不停運轉，工人三班24小時輪班作業，作業現場人聲鼎沸，如今要關廠，當年盛況不再。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/091.jpg" title="牆上的工作班表還張貼著三班制的工作人員，而他們的首要任務現在已從生產作業變成停場作業。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/161.jpg" title="高廠先進的控制系統讓監控人員透過按鍵儀表就可以掌握整個工場的現況。(攝影／林聰勝)" /></li>
 				</ul>
 			</div>
 			<div style="position:relative; text-align:left; margin-top:60px; font-size:18px; letter-spacing:0.2em; line-height:30px; margin: 30px 3%;">
@@ -229,9 +229,9 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/166.jpg" title="高廠擁有自己的消防隊，當年的配置裝備甚至可以匹敵地方政府的資源。(林聰勝攝/報導者)" /></li>
-				  <li><img src="img/slider/167.jpg" title="過去頂尖的裝備經過時間洗禮已不再光鮮亮麗，但它們曾經保護許多打火弟兄的生命。(林聰勝攝/報導者)" /></li>
-				  <li><img src="img/slider/169.jpg" title="隨著高廠關閉，消防隊也可能跟著裁撤，吊掛在架上的防火裝備也見證這一個歷史的過程。(林聰勝攝/報導者)" /></li>
+				  <li><img src="img/slider/166.jpg" title="高廠擁有自己的消防隊，當年的配置裝備甚至可以匹敵地方政府的資源。(攝影／林聰勝)" /></li>
+				  <li><img src="img/slider/167.jpg" title="過去頂尖的裝備經過時間洗禮已不再光鮮亮麗，但它們曾經保護許多打火弟兄的生命。(攝影／林聰勝)" /></li>
+				  <li><img src="img/slider/169.jpg" title="隨著高廠關閉，消防隊也可能跟著裁撤，吊掛在架上的防火裝備也見證這一個歷史的過程。(攝影／林聰勝)" /></li>
 				</ul>
 			</div>
 			<div style="position:relative; text-align:left; margin-top:60px; font-size:18px; letter-spacing:0.2em; line-height:30px; margin: 30px 3%;">
@@ -240,7 +240,7 @@
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/069.jpg" style="max-width:100%;" />
 			<div style="position:relative; text-align:left; margin-top:60px; font-size:18px; letter-spacing:0.2em; line-height:30px; margin: 10px 3%;">
 				<img src="img/slider/069.jpg" style="max-width:100%;" />
-				<p style="font-size:14px; margin-top:10px;">作家楊清矗的父親曾經是高廠消防隊員，這裡雖然不是父親隸屬的小隊，但仍然讓楊清矗勾起許多對父親的記憶。(林聰勝攝/報導者)</p>
+				<p style="font-size:14px; margin-top:10px;">作家楊清矗的父親曾經是高廠消防隊員，這裡雖然不是父親隸屬的小隊，但仍然讓楊清矗勾起許多對父親的記憶。(攝影／林聰勝)</p>
 			</div>
 		</section>
 
@@ -312,9 +312,9 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img class="b-lazy" src="img/slider/030.jpg" title="張金塗在高廠時當建教生及工人的老照片。(張金塗提供/余志偉翻攝)" /></li>
-				  <li><img class="b-lazy" src="img/slider/031.jpg" title="張金塗在高廠時當建教生及工人的老照片。(張金塗提供/余志偉翻攝)" /></li>
-				  <li><img class="b-lazy" src="img/slider/032.jpg" title="張金塗在高廠時當建教生及工人的老照片。(張金塗提供/余志偉翻攝)" /></li>
+				  <li><img class="b-lazy" src="img/slider/030.jpg" title="民國60年代高廠時當建教生及工人的老照片。(張金塗提供／余志偉翻攝)" /></li>
+				  <li><img class="b-lazy" src="img/slider/031.jpg" title="民國60年代高廠時當建教生及工人的老照片。(張金塗提供／余志偉翻攝)" /></li>
+				  <li><img class="b-lazy" src="img/slider/032.jpg" title="民國60年代高廠時當建教生及工人的老照片。(張金塗提供／余志偉翻攝)" /></li>
 				</ul>
 			</div>
 		</section>
@@ -367,7 +367,7 @@
 		<section class="panel">
 			<div style="position:relative; text-align:left; margin-top:60px; font-size:18px; letter-spacing:0.2em; line-height:30px; margin: 10px 3%;">
 				<img src="img/slider/210.jpg" style="max-width:100%;" />
-				<p style="font-size:14px; margin-top:10px;">高廠西門內矗立的蔣介石銅像是目前少數還留存的銅像之一，如今成為威權時代的象徵。(林聰勝攝/報導者)</p>
+				<p style="font-size:14px; margin-top:10px;">高廠西門內矗立的蔣介石銅像是目前少數還留存的銅像之一，如今成為威權時代的象徵。(攝影／林聰勝)</p>
 			</div>
 			<div style="position:relative; text-align:left; margin-top:60px; font-size:18px; letter-spacing:0.2em; line-height:30px; margin: 30px 3%;">
 				<p class="sourcehansans-tc-regular">往宏南社區得經過西門，阿昌想起25年前，由於後勁居民在西門圍廠抗議，阿昌上班時都要繞一大段路，從北門還有新北門進來，當時他覺得好麻煩。出廠他特意回頭看了一下大門，不知道那些剽悍的抗爭者後來怎麼了。廠內還有一座蔣介石銅像，看起來比平常還高大，關廠後，這座威權時代的遺留，大概也要被拉倒了。</p>
@@ -375,9 +375,9 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/343.jpg" title="高廠西大門承載了許多歷史的記憶，它曾經是石化產業、經濟起飛的出口，也是後勁居民埋鍋造飯、抗爭汙染，導致高廠最後關廠的入口。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/9766.jpg" title="夜晚，工人們從高廠西大門下班，蔣介石的銅像矗立著，銅像背後的燃燒塔還噴發著烈焰，然而這樣的圖像很快會消失，隨著高廠關閉、隨著夜幕降臨隱沒。(林聰勝攝/報導者)" /></li>
-				</ul>
+				  <li><img src="img/slider/343.jpg" title="高廠西大門承載了許多歷史的記憶，它曾經是石化產業、經濟起飛的出口，也是後勁居民埋鍋造飯、抗爭汙染，導致高廠最後關廠的入口。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/9766.jpg" title="夜晚，工人們從高廠西大門下班，這樣的圖像很快會消失，隨著高廠關閉、隨著夜幕降臨隱沒。(攝影／林聰勝)" /></li>
+				</ul>蔣介
 			</div>
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/18.jpg" style="max-width:100%;" />
 			<div class="dialogue shadow-3px" style="width:initial; position:relative; top:0; left: 0; right:0; padding:25px; margin: 30px 3%;" >
@@ -447,10 +447,10 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/351.jpg" title="高廠員工宿舍區的棒壘球場。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/352.jpg" title="高廠員工宿舍區的游泳池。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/355.jpg" title="高廠員工宿舍區的溜冰場。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/394.jpg" title="高廠員工宿舍區的室內籃球場。(余志偉攝/報導者)" /></li>
+				  <li><img src="img/slider/351.jpg" title="高廠員工宿舍區的棒壘球場。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/352.jpg" title="高廠員工宿舍區的游泳池。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/355.jpg" title="高廠員工宿舍區的溜冰場。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/394.jpg" title="高廠員工宿舍區的室內籃球場。(攝影／余志偉)" /></li>
 				</ul>
 			</div>
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/22.jpg" style="max-width:100%;" />
@@ -516,9 +516,9 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/184.jpg" title="高廠宏南員工宿舍區綠樹成蔭、環境清優，居住品質相當良好。(林聰勝攝/報導者)" /></li>
-				  <li><img src="img/slider/345.jpg" title="高廠宏南員工宿舍戶戶有庭院，一間間房子就像小別墅一樣。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/349.jpg" title="高廠員工宿舍就緊鄰廠區，良好的居住品質與造成汙染的廠區形成對比。(余志偉攝/報導者)" /></li>
+				  <li><img src="img/slider/184.jpg" title="高廠宏南員工宿舍區綠樹成蔭、環境清優，居住品質相當良好。(攝影／林聰勝)" /></li>
+				  <li><img src="img/slider/345.jpg" title="高廠宏南員工宿舍戶戶有庭院，一間間房子就像小別墅一樣。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/349.jpg" title="高廠員工宿舍就緊鄰廠區，良好的居住品質與造成汙染的廠區形成對比。(攝影／余志偉)" /></li>
 				</ul>
 			</div>
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/26.jpg" style="max-width:100%;" />
@@ -580,8 +580,8 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/023.jpg" title="曾經廠區內工人、包商、協力廠商川流不息，在啟動關廠計畫後，工場逐一停工，廠區人跡也大幅銳減。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/139.jpg" title="油槽區在過往是國防重地，甚至有保警戍守，如今因為高廠關閉才有機會一探究竟。(林聰勝攝/報導者)" /></li>
+				  <li><img src="img/slider/023.jpg" title="曾經廠區內工人、包商、協力廠商川流不息，在啟動關廠計畫後，工場逐一停工，廠區人跡也大幅銳減。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/139.jpg" title="油槽區在過往是國防重地，甚至有保警戍守，如今因為高廠關閉才有機會一探究竟。(攝影／林聰勝)" /></li>
 				</ul>
 			</div>
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/29-1.jpg" style="max-width:100%;" />
@@ -600,9 +600,9 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/388.jpg" title="監工葉天德(右)與許進興到高廠服務超過30年，現在高廠即將結束營運，他們感嘆萬千。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/385.jpg" title="監工葉天德(右)與許進興到高廠服務超過30年，現在高廠即將結束營運，他們感嘆萬千。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/386.jpg" title="監工葉天德(右)與許進興到高廠服務超過30年，現在高廠即將結束營運，他們感嘆萬千。(余志偉攝/報導者)" /></li>
+				  <li><img src="img/slider/388.jpg" title="監工葉天德(右)與許進興到高廠服務超過30年，現在高廠即將結束營運，他們感嘆萬千。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/385.jpg" title="監工葉天德(右)與許進興到高廠服務超過30年，現在高廠即將結束營運，他們感嘆萬千。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/386.jpg" title="監工葉天德(右)與許進興到高廠服務超過30年，現在高廠即將結束營運，他們感嘆萬千。(攝影／余志偉)" /></li>
 				</ul>
 			</div>
 		</section>
@@ -733,8 +733,8 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/356.jpg" title="高廠員工宿舍區的幼兒園。(余志偉攝/報導者)" /></li>
-				  <li><img src="img/slider/382.jpg" title="高廠員工宿舍區的殯儀館遺址，以前高廠員工福利好，生老病死各項設施一應俱全。(余志偉攝/報導者)" /></li>
+				  <li><img src="img/slider/356.jpg" title="高廠員工宿舍區的幼兒園。(攝影／余志偉)" /></li>
+				  <li><img src="img/slider/382.jpg" title="高廠員工宿舍區的殯儀館遺址，以前高廠員工福利好，生老病死各項設施一應俱全。(攝影／余志偉)" /></li>
 				</ul>
 			</div>
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/39.jpg" style="max-width:100%;" />
