--- a/mobile.html
+++ b/mobile.html
@@ -4,12 +4,17 @@
 	<meta charset="utf-8"> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+	<meta property="og:title" content="高雄廠煙下，中油工人的最後一天 | 報導者">
+	<meta property="og:description" content="2015年10月底，《報導者》採訪團隊在高雄煉油廠停工前夕深入廠區，藉由現場目擊與拍攝、訪談多位中油不同世代員工，綜合寫成一名工人阿昌的故事。阿昌並非真實人物，但從真實素材而來。此數位專題將以他的遭遇、回憶及情感，在灰濛的廠煙下，描繪一整代高廠工人的輪廓。">
+	<meta property="og:type" content="article">
+	<meta property="og:url" content="https://kojima.tw/project/parallax/" />
+	<meta property="og:image" content="https://kojima.tw/project/parallax/img/cover_share.jpg">
 	<title>高雄廠煙下，中油工人的最後一天 | 報導者</title>
 
 	<link rel="stylesheet" href="style/jquery.bxslider.css" type="text/css">
 	<link rel="stylesheet" href="style/mobile_style.css" type="text/css">
 	<link rel="stylesheet" href="style/footer.css" type="text/css">
-	<link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href="//fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 
 	<!-- Justfont -->
 	<script type="text/javascript">var _jf = _jf || [];_jf.push(['p','37992']);_jf.push(['_setFont','sourcehansans-tc-extralight','css','.sourcehansans-tc-extralight']);_jf.push(['_setFont','sourcehansans-tc-extralight','alias','sourcehansans-tc']);_jf.push(['_setFont','sourcehansans-tc-extralight','weight',100]);_jf.push(['_setFont','sourcehansans-tc-regular','css','.sourcehansans-tc-regular']);_jf.push(['_setFont','sourcehansans-tc-regular','alias','sourcehansans-tc']);_jf.push(['_setFont','sourcehansans-tc-regular','weight',400]);_jf.push(['_setFont','sourcehansans-tc-medium','css','.sourcehansans-tc-medium']);_jf.push(['_setFont','sourcehansans-tc-medium','alias','sourcehansans-tc']);_jf.push(['_setFont','sourcehansans-tc-medium','weight',600]);_jf.push(['_setFont','jf-sunday','css','.jf-sunday']);_jf.push(['_setFont','jf-sunday','alias','jf-sunday']);_jf.push(['_setFont','jf-sunday','weight',600]);_jf.push(['_setFont','jf-justwriting','css','.jf-justwriting']);_jf.push(['_setFont','jf-justwriting','alias','jf-justwriting']);_jf.push(['_setFont','jf-justwriting','weight',500]);(function(f,q,c,h,e,i,r,d){var k=f._jf;if(k.constructor===Object){return}var l,t=q.getElementsByTagName("html")[0],a=function(u){for(var v in k){if(k[v][0]==u){if(false===k[v][1].call(k)){break}}}},j=/\S+/g,o=/[\t\r\n\f]/g,b=/^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g,g="".trim,s=g&&!g.call("\uFEFF\xA0")?function(u){return u==null?"":g.call(u)}:function(u){return u==null?"":(u+"").replace(b,"")},m=function(y){var w,z,v,u,x=typeof y==="string"&&y;if(x){w=(y||"").match(j)||[];z=t[c]?(" "+t[c]+" ").replace(o," "):" ";if(z){u=0;while((v=w[u++])){if(z.indexOf(" "+v+" ")<0){z+=v+" "}}t[c]=s(z)}}},p=function(y){var w,z,v,u,x=arguments.length===0||typeof y==="string"&&y;if(x){w=(y||"").match(j)||[];z=t[c]?(" "+t[c]+" ").replace(o," "):"";if(z){u=0;while((v=w[u++])){while(z.indexOf(" "+v+" ")>=0){z=z.replace(" "+v+" "," ")}}t[c]=y?s(z):""}}},n;k.push(["_eventActived",function(){p(h);m(e)}]);k.push(["_eventInactived",function(){p(h);m(i)}]);k.addScript=n=function(u,A,w,C,E,B){E=E||function(){};B=B||function(){};var x=q.createElement("script"),z=q.getElementsByTagName("script")[0],v,y=false,D=function(){x.src="";x.onerror=x.onload=x.onreadystatechange=null;x.parentNode.removeChild(x);x=null;a("_eventInactived");B()};if(C){v=setTimeout(function(){D()},C)}x.type=A||"text/javascript";x.async=w;x.onload=x.onreadystatechange=function(G,F){if(!y&&(!x.readyState||/loaded|complete/.test(x.readyState))){y=true;if(C){clearTimeout(v)}x.src="";x.onerror=x.onload=x.onreadystatechange=null;x.parentNode.removeChild(x);x=null;if(!F){setTimeout(function(){E()},200)}}};x.onerror=function(H,G,F){if(C){clearTimeout(v)}D();return true};x.src=u;z.parentNode.insertBefore(x,z)};a("_eventPreload");m(h);n(r,"text/javascript",false,3000)})(this,this.document,"className","jf-loading","jf-active","jf-inactive","//d3gc6cgx8oosp4.cloudfront.net/js/stable/v/4.9.4/id/83450282629");
@@ -739,7 +744,8 @@
 			</div>
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/39.jpg" style="max-width:100%;" />
 			<div class="dialogue shadow-3px" style="width:initial; position:relative; top:0; left: 0; right:0; padding:25px; margin: 30px 3%;" >
-				<p class="sourcehansans-tc-regular">但在抗爭的那幾年，阿昌耳聞，燃燒塔對於居民，就像地獄的象徵。</p>
+				<p class="sourcehansans-tc-regular">高廠全盛時期，從幼稚園到殯儀館一應俱全。多年後，宿舍旁的殯儀館在前幾個月被檢舉而停業。</p>
+				<p class="sourcehansans-tc-regular">從幼兒紅撲撲的臉蛋，到停屍間裡冰冷的遺體，路程只有十分鐘，都在高廠裡。</p>
 			</div>
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/40-1.jpg" style="max-width:100%;" />
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/40-2.jpg" style="max-width:100%;" />
@@ -786,7 +792,7 @@
 				</div>
 				<div class="item">
 					<div style="color:#FFF; padding:5px; background-color: #000; width:165px; height:35px; text-align:center; line-height:30px; font-size:18px; display:inline-block; letter-spacing:0.05em;">
-						<a style="color:#FFF;text-decoration: none; font-family: 'Montserrat', sans-serif;" href="https://www.twreporter.org">SOURCE CODE</a>
+						<a style="color:#FFF;text-decoration: none; font-family: 'Montserrat', sans-serif;" href="https://github.com/twreporter/infographics/tree/gh-pages/fifth-plant">SOURCE CODE</a>
 					</div>
 				</div>
 			</div>
@@ -797,6 +803,11 @@
 	</div>
 	<script type="text/javascript">
 		$(function () { // wait for document ready
+
+			if( $(window).innerWidth() > 960 ){
+				window.location = "index.html";
+			}
+
 			/*
 			 *  Lazy load
 			 */
