--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
 	<!-- Share Button -->
 	<div style="position:fixed; top:8px; right:45px; z-index:10;">
-		<div class="facebook" style="display:inline-block; margin-right:22px;">
-			<img src="img/facebook.png" class="img-shadow" />
+		<div class="facebook" style="display:inline-block; margin-right:22px; opacity:0.6;">
+			<a style="text-decoration:none;" href="https://www.facebook.com/sharer/sharer.php?u=%E9%AB%98%E9%9B%84%E5%BB%A0%E7%85%99%E4%B8%8B%EF%BC%8C%E4%B8%AD%E6%B2%B9%E5%B7%A5%E4%BA%BA%E7%9A%84%E6%9C%80%E5%BE%8C%E4%B8%80%E5%A4%A9%20%7C%20%E5%A0%B1%E5%B0%8E%E8%80%85"><img src="img/facebook.png" class="img-shadow" /></a>
 		</div>
-		<div class="twitter" style="display:inline-block;">
-			<img src="img/twitter.png" class="img-shadow" />
+		<div class="twitter" style="display:inline-block; opacity:0.6;">
+			<a style="text-decoration:none;" href="https://twitter.com/home?status=%E9%AB%98%E9%9B%84%E5%BB%A0%E7%85%99%E4%B8%8B%EF%BC%8C%E4%B8%AD%E6%B2%B9%E5%B7%A5%E4%BA%BA%E7%9A%84%E6%9C%80%E5%BE%8C%E4%B8%80%E5%A4%A9%20%7C%20%E5%A0%B1%E5%B0%8E%E8%80%85"><img src="img/twitter.png" class="img-shadow" /></a>
 		</div>
 	</div>
 
