--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 							</div>
 							<div style="position:relative; text-align:left; margin-top:60px; width: calc(100% - 45px); font-size:18px; letter-spacing:0.2em;">
 								<img src="img/slider/069.jpg" style="max-width:100%;" />
-								<p style="font-size:14px;">作家楊清矗的父親曾經是高廠消防隊員，這裡雖然不是父親隸屬的小隊，但仍然讓楊清矗勾起許多對父親的記憶。(攝影／林聰勝)</p>
+								<p style="font-size:14px;">作家楊青矗的父親曾經是高廠消防隊員，這裡雖然不是父親隸屬的小隊，但仍然讓楊青矗勾起許多對父親的記憶。(攝影／林聰勝)</p>
 							</div>
 						</div>
 					</section>
@@ -352,7 +352,7 @@
 						<div style="width:50%; float:right; ">
 							<div style="position:relative; background-color:#CCC;width: calc(100% - 45px); margin-top: 180px; text-align:left;">
 								<ul class="bxslider">
-								  <li><img src="img/slider/184.jpg" title="高廠宏南員工宿舍區綠樹成蔭、環境清優，居住品質相當良好。(攝影／林聰勝)" /></li>
+								  <li><img src="img/slider/184.jpg" title="高廠宏南員工宿舍區綠樹成蔭、環境清幽，居住品質相當良好。(攝影／林聰勝)" /></li>
 								  <li><img src="img/slider/345.jpg" title="高廠宏南員工宿舍戶戶有庭院，一間間房子就像小別墅一樣。(攝影／余志偉)" /></li>
 								  <li><img src="img/slider/349.jpg" title="高廠員工宿舍就緊鄰廠區，良好的居住品質與造成汙染的廠區形成對比。(攝影／余志偉)" /></li>
 								</ul>
