--- a/mobile.html
+++ b/mobile.html
@@ -245,7 +245,7 @@
 			<img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="img/069.jpg" style="max-width:100%;" />
 			<div style="position:relative; text-align:left; margin-top:60px; font-size:18px; letter-spacing:0.2em; line-height:30px; margin: 10px 3%;">
 				<img src="img/slider/069.jpg" style="max-width:100%;" />
-				<p style="font-size:14px; margin-top:10px;">作家楊清矗的父親曾經是高廠消防隊員，這裡雖然不是父親隸屬的小隊，但仍然讓楊清矗勾起許多對父親的記憶。(攝影／林聰勝)</p>
+				<p style="font-size:14px; margin-top:10px;">作家楊青矗的父親曾經是高廠消防隊員，這裡雖然不是父親隸屬的小隊，但仍然讓楊青矗勾起許多對父親的記憶。(攝影／林聰勝)</p>
 			</div>
 		</section>
 
@@ -521,7 +521,7 @@
 			<div style="position:relative; max-width:94%; margin: 30px 3%; margin-top:0px; text-align:left;">
 				<p style="text-align:center; color:#CCC; marign:10px 0;">＊左右滑動上下張＊</p>
 				<ul class="bxslider">
-				  <li><img src="img/slider/184.jpg" title="高廠宏南員工宿舍區綠樹成蔭、環境清優，居住品質相當良好。(攝影／林聰勝)" /></li>
+				  <li><img src="img/slider/184.jpg" title="高廠宏南員工宿舍區綠樹成蔭、環境清幽，居住品質相當良好。(攝影／林聰勝)" /></li>
 				  <li><img src="img/slider/345.jpg" title="高廠宏南員工宿舍戶戶有庭院，一間間房子就像小別墅一樣。(攝影／余志偉)" /></li>
 				  <li><img src="img/slider/349.jpg" title="高廠員工宿舍就緊鄰廠區，良好的居住品質與造成汙染的廠區形成對比。(攝影／余志偉)" /></li>
 				</ul>
