correct z-index  order

--- a/mobile.html
+++ b/mobile.html
@@ -24,7 +24,7 @@
 
 <body style="min-width:310px;margin:0;">
 	<!-- Header and Navigation -->
-	<div style="position:fixed; top:0px; z-index:10; width:100%; height:35px; background-color:#000; line-height:35px;">
+	<div style="position:fixed; top:0px; z-index:10; width:100%; height:35px; background-color:#000; line-height:35px; z-index:999;">
 		<div id="menu" class="menu"></div>
 		<a href="https://www.twreporter.org/a/refinery-content"><div class="logo"></div></a>
 		<div style="float:right;">
@@ -38,7 +38,7 @@
 	</div>
 
 	<div class="navigation-wrapper">
-		<div id="close-menu" class="close-navigation" style="position:fixed; top:0; right:0;">
+		<div id="close-menu" class="close-navigation" style="position:fixed; top:0; right:0; z-index:9999;">
 			<img src="img/close_menu.png" style="width:70px; height:70px;" />
 		</div>
 		<div class="overlay-content">
