implement text box at page 3

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
 						<div id="p-3-route" class="b-lazy BG" data-src="img/map/route.png"></div>
 						<div id="p-3-label-small" class="b-lazy BG" data-src="img/map/label_small.png"></div>
 						<div id="p-3-label-large" class="b-lazy BG" data-src="img/map/label_large.png"></div>
+						<div id="box2" style="position:absolute; top:60vh; left:50vw; max-width:400px; padding:25px; font-size:18px; letter-spacing:0.2em; border:solid #000 1px; background-color:rgba(255,255,255,0.5);border-top-right-radius: 30px;  border-bottom-left-radius: 30px; opacity:0; text-align:left; line-height:30px;" >
+							<p>今天他工作的硫磺工場是最後一天運作，他已在高雄煉油廠工作35年，以為將在這裡退休、老死，沒想到會因為關廠提前離開，出門前，他的腳步顯得徬徨，踏出去之後會走向何方，他不知道。</p>
+						</div>
 					</section>
 
 					<section id="p-4" class="panel" style="height:100%; overflow:hidden;">
